--- a/1_gametheory.qmd
+++ b/1_gametheory.qmd
@@ -8,7 +8,7 @@ Other games like Bingo, Dreidel, and of course Snakes and Ladders can deceptivel
 
 ![](assets/eliezer_snakes.jpg) 
 
-There are three main classes of games that do have significant strategic agency: **perfect information**, **perfect information with randomness**, and **imperfect (hidden) information**. 
+There are three main classes of games that do have significant strategic agency: **perfect information**, **perfect information with randomness**, and **imperfect (hidden) information**. Perfect information means all game information is visible, while imperfect information meanas there is hidden/private information. 
 
 We can also think about games along the axis of **fixed or random opponents** and **adversarial opponents**. 
 
@@ -17,7 +17,7 @@ We can also think about games along the axis of **fixed or random opponents** an
 | Game/Opponent     | Fixed/Random Opponent | Adversarial Opponent | 
 |------------|-----------|--------|
 | **No Player Agency/Decisions**      | Candy Land, War, Dreidel, Bingo, Snakes and Ladders         | Blackjack dealer
-| **Perfect Info**     | Puzzles, Rubix cube  | Tictactoe, Checkers, Chess, Arimaa, Go, Connect Four |
+| **Perfect Info**     | Puzzles, Rubik's Cube | Tictactoe, Checkers, Chess, Arimaa, Go, Connect Four |
 | **Perfect Info with Randomness**     | Monopoly, Risk   | Backgammon |
 | **Imperfect Info**    | Wordle, Blackjack  | Poker, Rock Paper Scissors, Figgie, StarCraft |
 
@@ -61,14 +61,14 @@ The core features of a game are its players, the actions of each player, and the
 | **Paper**  | (1, -1) | (0, 0)  | (-1, 1)  |
 | **Scissors** | (-1, 1) | (1, -1) | (0, 0)   |
 
-The payoffs for Player 1 are on the left and for Player 2 on the right in each payoff outcome of the game. For example, the bottom left payoff is when Player 1 plays Scissors and Player 2 plays Rock, resulting in -1 for P1 and +1 for P2. 
+The **payoffs** for Player 1 are on the left and for Player 2 on the right in each payoff outcome of the game. For example, the bottom left payoff is when Player 1 plays Scissors and Player 2 plays Rock, resulting in -1 for P1 and +1 for P2. 
+
+A **strategy** says which actions you would take for every state of the game.
 
 ### Expected value
-A strategy says which actions you would take for every state of the game.
-
 **Expected value** in a game represents the average outcome of a strategy if it were repeated many times. It’s calculated by multiplying each possible outcome by its probability of occurrence and then summing these products.
 
-Suppose that  Player 1 plays the strategy: 
+Suppose that Player 1 plays the strategy: 
 
 $$
 \begin{cases}
@@ -116,7 +116,7 @@ Note that the total probabilities sum to 1 and each row and column sums to the p
 
 We can work out the expected value of the game to Player 1 (summing all payoffs multiplied by probabilities from top left to bottom right): 
 
-$\mathbb{E} = 0(0.05) + -1(0.15) + 1(0.3) + 1(0.025) + 0(0.075) + -1(0.15) + -1(0.025) + 1(0.075) + 0(0.15) = 0.075$
+$\mathbb{E}[P_1] = 0(0.05) + -1(0.15) + 1(0.3) + 1(0.025) + 0(0.075) + -1(0.15) + -1(0.025) + 1(0.075) + 0(0.15) = 0.075$
 
 Therefore P1 is *expected* to gain 0.075 per game given these strategies. Since payoffs are reversed for P2, P2's expectation is -0.075 per game. 
 
@@ -128,7 +128,7 @@ A Nash equilibrium means that no player can improve their expected payoff by uni
 
 In RPS, the Nash equilibrium strategy is to play each action $r = p = s = 1/3$ of the time. I.e., to play totally randomly. 
 
-This is called a mixed strategy, as opposed to a pure strategy, which would select only one action. Mixed strategies are useful in games of imperfect information because it's valuable to not be predictable and to conceal your private information. In perfect information games, the theoretically optimal play would not contain any mixing (i.e., if you could calculate all possible moves to the end of the game). 
+Played a combination of strategies is called a mixed strategy, as opposed to a pure strategy, which would select only one action. Mixed strategies are useful in games of imperfect information because it's valuable to not be predictable and to conceal your private information. In perfect information games, the theoretically optimal play would not contain any mixing (i.e., if you could calculate all possible moves to the end of the game). 
 
 The equilibrium RPS strategy is worked out below: 
 
@@ -264,7 +264,7 @@ The random equilibrium strategy will result in 0 against any pure strategy and a
 ### Exploiting vs. Nash
 The equilibrium strategy vs. a pure Rock opponent is a useful illustration of the limitations of playing at equilibrium. The Rock opponent is playing the worst possible strategy, yet equilibrium is still breaking even! 
 
-What's the best that we could do against Rock only? We could play **purely paper**. 
+What's the best that we could do against Rock only? We could play **purely paper**. The payoffs are written for playing Paper and the probabilities indicate the opponent playing only Rock. 
 
 $$
 \begin{equation}
@@ -278,7 +278,7 @@ $$
 
 We'd win 1 each game playing Paper vs. Rock. 
 
-How about against the opponent playing 60% Rock, 20% Paper, 20% Scissors? Here we can see that because they are overplaying Rock, our best strategy is again to always play Paper.
+How about against the opponent playing 60% Rock, 20% Paper, 20% Scissors? Here we can see that because they are overplaying Rock, our best strategy is again to always play Paper. We write the payoffs for playing Paper and the probabilities according to the *622* strategy. 
 
 $$
 \begin{equation}
@@ -291,7 +291,7 @@ $$
 \end{equation}
 $$
 
-Playing Paper vs. 622 results in an expected win of 0.4 per game. 
+Playing Paper vs. *622* results in an expected win of 0.4 per game. 
 
 ## Soccer Kicker vs. Goalie
 Consider the **Soccer Penalty Kick** game where a Kicker is trying to score a goal and the Goalie is trying to block it. 
@@ -346,7 +346,6 @@ We apply these probabilities to each of the 4 outcomes and write in terms of the
 Now for the Kicker, we have $\mathbb{E}[K] = 0.25(0) + 0.25(2) + 0.25(1) + 0.25(0) = 0.75$. 
 
 Since it's zero-sum, we have $\mathbb{E}[G] = -0.75$ for the Goalie.
-
 :::
 
 ### Probabilistic interpretations
@@ -359,7 +358,7 @@ Note that, for example, the Kicker playing 50% Left and 50% Right could be inter
 ### Finding equilibrium
 When the Goalie plays left with probability $p$ and right with probability $1-p$, we can find the expected value of the Kicker actions.
 
-| Kicker/Goalie | Lean Left (p) | Lean Right (1-p) | 
+| Kicker/Goalie | Lean Left ($p$) | Lean Right ($1-p$) | 
 |------------|-----------|--------|
 | **Kick Left** | (0, 0)  | (2, -2) |
 | **Kick Right** | (1, -1) | (0, 0) |
@@ -368,7 +367,9 @@ $\mathbb{E}[K(L)] = p(0) + (1-p)(2) = 2 - 2p$
 
 $\mathbb{E}[K(R)] = p(1) + (1-p)(0) = p$
 
-The Kicker is going to play the best response to the Goalie’s strategy. The Goalie wants to make the Kicker **indifferent** to Kick Left and Kick Right because if the Kicker was not going to be indifferent, then he would prefer one of the actions, meaning that action would be superior to the other. Therefore the Kicker will play a mixed strategy in response that will result in a Nash equilibrium where neither player benefits from unilaterally changing strategies. (Note that indifferent does not mean 50% each, but means the expected value is the same for each.)
+The Kicker is going to play the best response to the Goalie’s strategy. The Goalie wants to make the Kicker **indifferent** to Kick Left and Kick Right because if the Kicker was not going to be indifferent, then he would prefer one of the actions, meaning that action would be superior to the other. When you make your opponent indifferent, then you don’t give them any best play. 
+
+Therefore the Kicker will play a mixed strategy in response that will result in a Nash equilibrium where neither player benefits from unilaterally changing strategies. (Note that indifferent does not mean 50% each, but means the expected value is the same for each.)
 
 ![](assets/kickergoalieplot.png)
 
@@ -376,17 +377,17 @@ By setting the values equal, we get $2 - 2p = p \Rightarrow p = \frac{2}{3}$ as 
 
 This means that $1-p = 1 - \frac{2}{3} = \frac{1}{3}$. 
 
-Therefore the Goalie should play Lean Left $\frac{2}{3}$ and Lean Right $\frac{1}{3}$. 
+Therefore the Goalie should play Lean Left ($p$) $\frac{2}{3}$ and Lean Right ($1-p$) $\frac{1}{3}$. 
 
 The value for the Kicker is $\frac{2}{3}$, or $(0.67)$, for both actions, regardless of the Kicker's mixing strategy. 
 
 Note that the Kicker is worse off now ($0.67$ now compared to $0.75$) than when both players played 50% each action. Why?
 
-If the Kicker plays Left with probability $q$ and Right with probability $1-q$, then the Goalie’s values are: 
+If the Kicker plays Kick Left with probability $q$ and Kick Right with probability $1-q$, then the Goalie’s values are: 
 
-$\mathbb{E}(\text{Lean Left}) = 0q - 1(1-q) = -1 + q$
+$\mathbb{E}[G(L)] = 0(q) - 1(1-q) = -1 + q$
 
-$\mathbb{E}(\text{Lean Right}) = -2q + 0 = -2q$
+$\mathbb{E}[G(R)] = -2q + 0(1-q) = -2q$
 
 Setting equal, 
 
@@ -400,54 +401,38 @@ $$
 \end{equation}
 $$
 
-Therefore the Kicker should play Left $\frac{1}{3}$ and Right $\frac{2}{3}$, giving a value of $-\frac{2}{3}$ to the Goalie. 
+Therefore the Kicker should play Kick Left ($q$) $\frac{1}{3}$ and Kick Right ($1-q$) $\frac{2}{3}$, giving a value of $-\frac{2}{3}$ to the Goalie. 
 
 We can see this from the game table: 
 
 | Kicker/Goalie | Lean Left ($\frac{2}{3}$) | Lean Right ($\frac{1}{3}$) | 
 |------------|-----------|--------|
-| **Kick Left ($\frac{1}{3}$)** | Val: (0, 0) <br>Pr: ($\frac{2}{9}$) | Val: (2, -2) <br>Pr: ($\frac{1}{9}$) |
-| **Kick Right ($\frac{2}{3}$)** | Val: (1, -1) <br>Pr: ($\frac{4}{9}$) | Val: (0, 0) <br>Pr: ($\frac{2}{9}$) |
+| **Kick Left ($\frac{1}{3}$)** | Val: (0, 0) <br>Pr: $\frac{2}{9}$ | Val: (2, -2) <br>Pr: $\frac{1}{9}$ |
+| **Kick Right ($\frac{2}{3}$)** | Val: (1, -1) <br>Pr: $\frac{4}{9}$ | Val: (0, 0) <br>Pr: $\frac{2}{9}$ |
 
 Therefore the expected payoffs in this game are:
 
-$\mathbb{E}[K] = \frac{2}{9}(0) + \frac{1}{9}(2) + \frac{4}{9}(1) + \frac{2}{9}(0) = \frac{6}{9} = 0.67$ for the Kicker and $-0.67$ for the Goalie. 
+$\mathbb{E}[K] = \frac{2}{9}(0) + \frac{1}{9}(2) + \frac{4}{9}(1) + \frac{2}{9}(0) = \frac{6}{9} = 0.67$ for the Kicker and $-0.67$ for the Goalie.
 
 ### Switching out of equilibrium
-In an equilibrium, no player should be able to unilaterally improve by changing their strategy. What if the Kicker switches to always Kick Left?
+In equilibrium, both players are playing a *best response* against each other, giving no incentive to deviate. 
+
+Therefore no player can unilaterally improve by changing their strategy. What if the Kicker switches to always Kick Left?
 
 | Kicker/Goalie | Lean Left ($\frac{2}{3}$) | Lean Right ($\frac{1}{3}$) | 
 |------------|-----------|--------|
-| **Kick Left ($1$)** | Val: (0, 0) <br>Pr: ($\frac{2}{3}$) | Val: (2, -2) <br>Pr: ($\frac{1}{3}$) |
-| **Kick Right ($0$)** | Val: (1, -1) <br>Pr: ($0$) | Val: (0, 0) <br>Pr: ($0$) |
+| **Kick Left ($1$)** | Val: (0, 0) <br>Pr: $\frac{2}{3}$ | Val: (2, -2) <br>Pr: $\frac{1}{3}$ |
+| **Kick Right ($0$)** | Val: (1, -1) <br>Pr: $0$ | Val: (0, 0) <br>Pr: $0$ |
 
-Now the Kicker's payoff is still $\frac{1}{3}(2) = 0.67$. 
+Now the Kicker's payoff is still $\frac{1}{3}(2) = 0.67$.
 
-When a player makes their opponent indifferent, this means that any action the opponent takes (within the set of equilibrium actions) will result in the same payoff! 
+When a player makes their opponent indifferent, this means that any action the opponent takes (within the set of equilibrium actions) will result in the same payoff! But now they are no longer in equilibrium. 
 
 So if you know your opponent is playing the equilibrium strategy, then you can actually do whatever you want with no penalty with the mixing actions. Sort of. 
 
 The risk is that the opponent can now deviate from equilibrium and take advantage of your new strategy. For example, if the Goalie caught on and moved to always Lean Left, then the value is reduced to $0$ for both players. Though if the Kicker then caught on and moved to always Kick Right, then the value goes up to $1$ for the Kicker and $-1$ for the Goalie. Perhaps after a few cycles like this, the players would go back to equilibrium.
 
 To summarize, you can only be penalized for not playing the equilibrium mixing strategy if your opponent plays a non-equilibrium strategy that exploits your strategy. You can only profit more than the equilibrium strategy if your opponent either plays off equilibrium and you do as well or if you play equilibrium and they play some action that is not part of the equilibrium strategy (also known as the support, or the set of pure strategies that are played with non-zero probability under the mixed strategy, which is not possible in this game since both possible actions are played at equilibrium). 
-
-### What's up with indifference?
-Why do players make their opponent indifferent? When you make your opponent indifferent, then you don’t give them any best play. 
-
-
-
-
-
-### Deviating from Nash
-
-Best response to each other in equilibrium, no incentive to deviate. 
-Deviate means no longer in equilibrium, though EV is same. 
-only guarantee worst-case payoff of 0 if you randomize
-
-### Indifference 
-why is fundamental goal to make other player indifferent?
-if deviate, 
-indifference guarantees can't improve by changing unliterally 
 
 ## Clairvoyance Poker 
 Back to poker. We previously built **Face-up 3-card Poker** where each player was dealt a card from the deck of {0, 1, 2} and the high card won. 
