--- a/index.qmd
+++ b/index.qmd
@@ -1,24 +1,15 @@
 ---
-title: "Cards to Code"
-format: 
-  html
+title: "RPS Hackathon @ Recurse: Homepage"
+sidebar: rps-hackathon-recurse
+bread-crumbs: false
+format:
+  html:
+    math: true
 ---
-A course by Max Chiswick and Ross Rheingans-Yoo on building a basic poker bot from scratch. 
+![](math.jpeg)
 
-::: {layout="[[1,1]]"}
-![](assets/kuhn_strategy.gif)
+Welcome to the Rock Paper Scissors Hackathon @ Recurse Center in NYC taking place on Tuesday Sep 17, 2024. 
 
-![](assets/kuhn_solve.gif)
-:::
+Proceed to the [Instructions](instructions.qmd) to get started! 
 
-The course starts with game theory, then introduces a simplified poker setting, then the elements of the Counterfactual Regret Minimization (CFR) algorithm, and then beyond the vanilla CFR algorithm. 
 
-Throughout the course, we're building up code to first develop the game, and then piece by piece to develop the poker bot. 
-
-We end on opponent modeling and challenge problems that go beyond game theory optimal play. 
-
-**Prerequisites:** Basic Python and math (no poker knowledge necessary)
-
-**Groups/Questions:** We encourage you to work through this in groups. You can chat in our [Discord](https://discord.gg/KZQK2xN8Da) to discuss the course or look for others to work with.
-
-**Get started now!** Start with the [Setup and Face-up Poker](setup.qmd) page. 
