--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,5 @@
 ---
-title: "RPS Hackathon @ Recurse: Homepage"
-sidebar: rps-hackathon-recurse
+title: "RPS.bot"
 bread-crumbs: false
 format:
   html:
@@ -8,8 +7,12 @@ format:
 ---
 ![](math.jpeg)
 
-Welcome to the Rock Paper Scissors Hackathon @ Recurse Center in NYC taking place on Tuesday Sep 17, 2024. 
+RPS.bot is an intro to opponent modeling through the game Rock Paper Scissors. 
 
-Proceed to the [Instructions](instructions.qmd) to get started! 
+Although seemingly very simple, RPS is valuable for thinking about strategy in a repeated game against a variety of opponents. 
 
+From DeepMind in 2023:
 
+> In sequential decision-making, agent evaluation has largely been restricted to few interactions against experts, with the aim to reach some desired level of performance (e.g. beating a human professional player). We propose a benchmark for multiagent learning based on repeated play of the simple game Rock, Paper, Scissors.
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">gonna 3d print the exploitability of a player&#39;s rock-paper-scissors strategy over their strategy simplex <a href="https://t.co/cSXFKyI5E8">pic.twitter.com/cSXFKyI5E8</a></p>&mdash; Kevin a. Wang (@often_wang) <a href="https://twitter.com/often_wang/status/1838711689732132929?ref_src=twsrc%5Etfw">September 24, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
